1.Improved Contact Form on small Devices; 2.Fixed Section Skills on small Devices; 3.Fixed Footer on smaller Devices;

--- a/css/layout.css
+++ b/css/layout.css
@@ -189,6 +189,7 @@ div.pb-section.pb-section-0 {
     display: flex;
     padding: 0;
     margin: 0;
+    align-items: center; /* Vertical Alignment */
 }
 
 .meta-nav li {
@@ -235,11 +236,6 @@ div.pb-section.pb-section-0 {
 
 .form-contact select, input {
     min-height: 25px; /* to cover better the available area */
-}
-
-.form {
-    border: 1px solid #000;
-    padding: 1rem;
 }
 
 .field-wrapper {
@@ -361,8 +357,38 @@ div.pb-section.pb-section-0 {
     grid-column: 1/3;
 }
 
-@media screen and (min-width: 753px) {
-    /**
+.container-contact {
+    display: grid;
+    gap: 1rem;
+}
+
+.container-contact .contact-details {
+    margin-bottom: 1rem;
+}
+
+.form {
+    display: grid;
+    row-gap: 1rem;
+    padding: 1rem;
+}
+
+.container-contact .form .entire-line {
+    grid-column: 1/3;
+}
+
+.container-skillset .flex-container {
+    flex-direction: row;
+}
+
+.skill {
+    min-width: 30%;
+}
+
+.x {
+    min-width: 30%;
+}
+
+/**
      * Reset Settings
      */
      .field-wrapper .field {
@@ -389,32 +415,76 @@ div.pb-section.pb-section-0 {
         margin-bottom: 0rem;
     }
 
-    /**
-     * Normal Settings
-     */
-
-    .pb-text h2{
-        font-size: 65px;
+@media screen and (max-width: 753px) {
+    .container-contact .form .entire-line {
+         grid-column: 1/1;
+         padding-left: 12%;
+         /* width: 75%; */
     }
 
-    /* .offer h3 {
-        font-size: 30px;
+    .container-contact {
+        padding: 2rem 0;
+    }
+
+    .container-contact .contact-details {
+        margin-bottom: 1.5rem;
+    }
+
+    .container-contact .form-contact .form {
+        grid-template-columns: 1fr;
+        text-align: center;
+        padding: 1rem 0;
+        border: none;
+    }
+
+    .text-field-required {
+        padding-left: 12%;
+    }
+
+    /* .container-contact .entire-line {
+        
     } */
-     
-    .pb-section-4 > .container-fluid {
-        display: grid;
-        grid-template-columns: 1fr 1.25fr;
-        gap: 1rem;
+
+    .container-contact .field-wrapper .field {
+        text-align: start;
     }
 
-    .form {
-        display: grid;
+    .container-contact .entire-line, .container-contact .form-label, .container-submit {
+        text-align: start;
+    }
+
+    .container-contact .field-wrapper .inputfield {
+        width: 50%;
+    }
+
+    .container-contact .container-submit {
+        padding-left: 12%;
+    }
+
+    .container-contact .field-wrapper .email {
+        width: 75%;
+    }
+
+    .container-contact .field-wrapper .textarea {
+        width: 75%;
+    }
+
+    .container-skillset .flex-container {
+        flex-direction: column;
+    }
+    
+    .skill {
+        margin-bottom: 2rem;
+    }
+
+    .section-heading-icons h2 {
+        line-height: 1.2em;
+    }
+}
+
+@media screen and (min-width: 754px) and (max-width: 1134px) {
+    .container-contact .form {
         grid-template-columns: 1fr 1fr;
-        row-gap: 1rem;
-    }
-
-    .entire-line {
-        grid-column: 1/3;
     }
 }
 
@@ -460,8 +530,16 @@ div.pb-section.pb-section-0 {
         text-align: center;
     }
 
-    .container-offers-1 .section-heading, .container-offers-2 .section-heading {
+    .container-offers-1 .section-heading, .container-offers-2 .section-heading, .container-contact .section-heading {
         grid-column: 1/1;
+        text-align: center;
+    }
+
+    .container-contact {
+        grid-template-columns: 1fr;
+    }
+
+    .container-contact .contact-details p {
         text-align: center;
     }
 }
@@ -471,6 +549,50 @@ div.pb-section.pb-section-0 {
     .container-offers-1, .container-offers-2 {
         grid-template-columns: 1fr 1fr;
         column-gap: 5rem;
+    }
+
+    .container-contact {
+        grid-template-columns: 1fr 1.25fr;
+    }
+}
+
+@media screen and (min-width: 754px) and (max-width: 1134px) {
+    .container-contact {
+        padding: 2rem;
+    }
+
+    .container-contact .contact-details {
+        margin-bottom: 1.5rem;
+    }
+
+    .container-contact .form-contact .form {
+        text-align: center;
+        padding: 1rem 0;
+        border: none;
+    }
+
+    .text-field-required {
+        padding-left: 6%;
+    }
+
+    .container-contact .entire-line {
+        padding-left: 6%;
+    }
+
+    .container-contact .entire-line, .form-label, .container-submit {
+        text-align: start;
+    }
+
+    .container-contact .container-submit {
+        padding-left: 12%;
+    }
+
+    .container-contact .field-wrapper .email {
+        width: 54%;
+    }
+
+    .container-contact .field-wrapper .textarea {
+        width: 94%;
     }
 }
 
@@ -535,7 +657,6 @@ div.pb-section.pb-section-0{ min-height: 25vw; }
 @media screen and (min-width: 625px) and (max-width: 1134px) {
     .offer .sub-title p{ font-size: 1.7rem; }
 }
-
 
 @media screen and (max-width: 624px) {
     .offer .sub-title p{ 
